# webrtc-cpp

./: CMakeLists.txt  webrtc-config.cmake
cmake/: ixwebsocket.cmake  json.cmake  libwebrtc.cmake  spdlog.cmake
example/: main.cpp  video.cpp
include/: connection.h  message.h  signal.h  stream.h  webrtc.h
src/: connection.cpp  signal.cpp  stream.cpp  webrtc.cpp
